--- a/simplification/seq2seq.ipynb
+++ b/simplification/seq2seq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,19 @@
        "5760"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import io\n",
+    "import json\n",
     "tokenizer = Tokenizer()\n",
     "tokenizer.fit_on_texts(advanced+elementary)\n",
+    "tokenizer_json = tokenizer.to_json()\n",
+    "with io.open('simplification_tokenizer.json', 'w', encoding='utf-8') as f:\n",
+    "    f.write(json.dumps(tokenizer_json, ensure_ascii=False))\n",
     "len(tokenizer.word_index)"
    ]
   },
